syntax = "proto3";
option java_package = "edu.jhu.order.deephealth";

package idl;

import "health.proto";

// Definition for the health service
service HealthService {
	// Add a subject to the observing subject list
  rpc Observe(ObserveRequest) returns (ObserveReply) {}

	// Stop observing a particular subject, all the reports
	// concerning this subject will be ignored
  rpc StopObserving(ObserveRequest) returns (ObserveReply) {}

	// Submit a report to the view storage
  rpc SubmitReport(SubmitReportRequest) returns (SubmitReportReply) {}

	// Query the health status of an entity
  rpc GetReport(GetReportRequest) returns (GetReportReply) {}
}

message ObserveRequest {
  string subject = 1;
}

message ObserveReply {
  bool success = 1;
}

message SubmitReportRequest {
  Report report = 1;
}

message SubmitReportReply {
  enum Status {
    IGNORED = 0;
    ACCEPTED = 1;
    FAILED = 2;
  }
  Status result = 1;
}

message GetReportRequest {
  string subject = 1;
}

message GetReportReply {
  Report report = 1;
}
